--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         
         </div>
        </div>
+    </section>
 
     <section class="recipies-container">
         <h2>My Recipies</h2>
@@ -64,24 +65,28 @@
         
         </div>
 
-
     </section>
-    <section class="social-media">
-        <div>
-            <h1>700k</h1>
-            <h3>Youtube Subscribers</h3>
-        </div>
-        <div>
-            <h1>2.4m</h1>
-            <h3>Instagram Followers</h3>
-        </div>
-        <div>
-            <h1>100k</h1>
-            <h3>Dribbble Shot Likes </h3>
-        </div>
 
+    <section class="social-media-container">
+        <div class="social-media">
+            <div class="followers">
+                <h1>700k</h1>
+                <h3>Youtube Subscribers</h3>
+            </div>
+            <div class="followers">
+                <h1>2.4m</h1>
+                <h3>Instagram Followers</h3>
+            </div>
+            <div class="followers">
+                <h1>100k</h1>
+                <h3>Dribbble Shot Likes </h3>
+            </div>
+        </div>
     </section>
-   
+
+    <section class="footer">
+        <h2 class="footer-title"><span class="orange">Eat</span> Fresh</h2>
+        <h3>Eat healthy to live healthy.Live healthy to live happy</h3>
 
     </section>
 </body>
